# llama3.2_OCR

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
config/: settings.py
src/: ocr_processor.py
