[project]
name = "llama3-2-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.18.0",
    "langchain-community>=0.3.16",
    "langchain-groq>=0.2.4",
    "numpy>=2.2.2",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
